picocuda/src/son/snapshots/picoc__son__parser__lexer__mul.snap
---
source: src/son/parser.rs
expression: output
---
[
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "main",
        typ: Alias,
    },
    Token {
        lexeme: "(",
        typ: PuncLeftParen,
    },
    Token {
        lexeme: ")",
        typ: PuncRightParen,
    },
    Token {
        lexeme: "{",
        typ: PuncLeftBrace,
    },
    Token {
        lexeme: "return",
        typ: KeywordRet,
    },
    Token {
        lexeme: "9",
        typ: LiteralInt,
    },
    Token {
        lexeme: "*",
        typ: Star,
    },
    Token {
        lexeme: "10",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "}",
        typ: PuncRightBrace,
    },
]
